# debug-crash

./: Cargo.toml  Makefile  README.md
assets/macos/Suplink.app/Contents/: Info.plist
src/: main.rs
