[package]
name = "suplink"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { git = "https://github.com/ealmloff/dioxus", branch = "bump-wry" }
dioxus-hooks ={ git = "https://github.com/ealmloff/dioxus", branch = "bump-wry" }
dioxus-html ={ git = "https://github.com/ealmloff/dioxus", branch = "bump-wry" }
dioxus-router ={ git = "https://github.com/ealmloff/dioxus", branch = "bump-wry" }
dioxus-desktop = { git = "https://github.com/ealmloff/dioxus", branch = "bump-wry", features = ["transparent"] }
dioxus-core ={ git = "https://github.com/ealmloff/dioxus", branch = "bump-wry" }
fermi ={ git = "https://github.com/ealmloff/dioxus", branch = "bump-wry" }

tracing-subscriber = { version = "0.3.17", features = [ "fmt"] }

muda = "0.9.4"